# bakelite-ssh-backend

./: pyproject.toml
bakelite_ssh_backend/: __init__.py
rust/: .gitignore  Cargo.toml
rust/src/: lib.rs  main.rs
